# swifttunnel-app

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  V3-ROUTING.md  release-signing.toml  swifttunnel-app.md
.github/workflows/: announce-release.yml  ci.yml  claude-code-review.yml  claude.yml  gitlab-mirror.yml  inspect-updater-key.yml  promote-stable.yml  reconcile-releases.yml  release-legacy-compat.yml  release-windows-velopack.yml  release.yml
Windows-testbench/: README.md  TestbenchHelpers.ps1  run_desktop_testbench_harness.ps1  run_split_tunnel_integration_test.ps1  run_split_tunnel_test.ps1
docs/: github-cutover.md  vpn-lifecycle-state-machine.md
docs/superpowers/plans/: 2026-04-25-bw-rebrand.md
docs/superpowers/specs/: 2026-04-25-bw-rebrand-design.md
release-notes/: v2.0.10.md  v2.0.11.md  v2.0.12.md  v2.0.13.md  v2.0.14.md  v2.0.15.md  v2.0.16.md  v2.0.17.md  v2.0.18.md  v2.0.19.md  v2.0.20.md  v2.0.21.md  v2.0.22.md  v2.0.23.md  v2.0.24.md  v2.0.25.md  v2.0.26.md  v2.0.27.md  v2.0.28.md  v2.0.29.md  v2.0.30.md  v2.0.31.md  v2.0.32.md  v2.0.33.md  v2.0.34.md  v2.0.35.md  v2.0.36.md  v2.0.37.md  v2.0.9.md  v2.1.0.md  v2.1.1.md  v2.1.10.md  v2.1.11.md  v2.1.12.md  v2.1.13.md  v2.1.14.md  v2.1.15.md  v2.1.16.md  v2.1.17.md  v2.1.18.md  (+39 more)
releases/: swifttunnel-0.1.3-x86_64.msi
scripts/: check-desktop-version-sync.mjs  select_latest_semver_tag.py  validate-revamp.ps1
swifttunnel-core/: Cargo.toml
swifttunnel-core/resources/: swifttunnel_power_plan.pow
swifttunnel-core/src/: diskless.rs  dns.rs  firewall_fixer.rs  fps_monitor.rs  geolocation.rs  lib.rs  network_booster.rs  notification.rs  optimizations.rs  performance_monitor.rs  process_names.rs  ram_cleaner.rs  roblox_optimizer.rs  roblox_watcher.rs  settings.rs  structs.rs  system_optimizer.rs  utils.rs
swifttunnel-core/src/auth/: device_identity.rs  http_client.rs  manager.rs  mod.rs  oauth_server.rs  storage.rs  types.rs
swifttunnel-core/src/discord_rpc/: manager.rs  mod.rs  state.rs
swifttunnel-core/src/network_analyzer/: bufferbloat_test.rs  mod.rs  speed_test.rs  stability_test.rs  types.rs
swifttunnel-core/src/roblox_proxy/: doh.rs  goodbyedpi.rs  hosts.rs  legacy_goodbyedpi.rs  mod.rs  (+3 more)
swifttunnel-desktop/: UI_REDESIGN_SPEC.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
swifttunnel-desktop/src/: App.tsx  main.tsx
swifttunnel-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
swifttunnel-desktop/src-tauri/capabilities/: default.json
swifttunnel-desktop/src-tauri/nsis/: uninstall-hook.nsh
swifttunnel-desktop/src-tauri/resources/tools/goodbyedpi/: README.md
swifttunnel-desktop/src-tauri/resources/tools/nvidiaProfileInspector/: README.md
swifttunnel-desktop/src-tauri/src/: autostart.rs  events.rs  harness.rs  lib.rs  logging.rs  main.rs  state.rs  tray.rs  window_restore.rs
swifttunnel-desktop/src-tauri/src/commands/: auth.rs  country_ban.rs  mod.rs  network.rs  optimization.rs  optimizer.rs  proxy.rs  settings.rs  system.rs  updater.rs  vpn.rs
swifttunnel-desktop/src-tauri/wix/: nsis-migration.wxs
swifttunnel-macos/: Cargo.toml
swifttunnel-macos/src/: geolocation.rs  lib.rs  main.rs  network_booster.rs  notification.rs  performance_monitor.rs  roblox_optimizer.rs  roblox_watcher.rs  structs.rs  system_optimizer.rs  utils.rs
swifttunnel-macos/src/auth/: http_client.rs  manager.rs  storage.rs
swifttunnel-macos/src/gui/: boost_tab.rs  layout.rs  login.rs  mod.rs  network_tab.rs  settings_tab.rs  theme.rs
swifttunnel-macos/src/updater/: auto_updater.rs  downloader.rs  installer.rs  marker.rs  mod.rs  verifier.rs
swifttunnel-macos/src/vpn/: adapter.rs  connection.rs  error_messages.rs  firewall.rs  mod.rs  packet_interceptor.rs  process_cache.rs  process_tracker.rs  process_watcher.rs  routes.rs  split_tunnel.rs  tunnel.rs  udp_relay.rs
swifttunnel-old/: build-velopack.ps1
swifttunnel-old/.cargo/: config.toml
swifttunnel-old/Tests/benchmark/speedtest/: Cargo.toml
swifttunnel-old/src/: tray.rs
swifttunnel-vpn-native/: Cargo.toml
swifttunnel-vpn-native/src/: error.rs  lib.rs  split_tunnel.rs  vpn.rs  wfp.rs
swifttunnel-windows/: Cargo.toml  app.manifest  build.ps1  build.rs  setup_rust.ps1
swifttunnel-windows/.cargo/: config.toml
swifttunnel-windows/Tests/: vpn_tests.rs
swifttunnel-windows/Tests/benchmark/: Cargo.toml
swifttunnel-windows/Tests/benchmark/speedtest/src/: main.rs
swifttunnel-windows/Tests/benchmark/src/: main.rs
swifttunnel-windows/installer/: SwiftTunnel.wxs  SwiftTunnelBundle.wxs  build-msi.ps1  download-driver.ps1  license.rtf
swifttunnel-windows/src/: dns.rs  geolocation.rs  gui.rs  gui_old.rs  lib.rs  main.rs  network_booster.rs  notification.rs  performance_monitor.rs  roblox_optimizer.rs  roblox_watcher.rs  settings.rs  structs.rs  system_optimizer.rs  tray.rs  utils.rs
swifttunnel-windows/src/auth/: http_client.rs  manager.rs  mod.rs  oauth_server.rs  storage.rs  types.rs
swifttunnel-windows/src/discord_rpc/: manager.rs  mod.rs  state.rs
swifttunnel-windows/src/gui/: animations.rs  boost_tab.rs  connect_tab.rs  header.rs  layout.rs  login.rs  mod.rs  network_tab.rs  settings_tab.rs  sidebar.rs  theme.rs
swifttunnel-windows/src/gui/components/: badge.rs  card.rs  mod.rs  table.rs  toggle.rs
swifttunnel-windows/src/gui/pages/: boost.rs  games.rs  home.rs  mod.rs  network.rs  settings.rs
swifttunnel-windows/src/network_analyzer/: mod.rs  speed_test.rs  stability_test.rs  types.rs
swifttunnel-windows/src/updater/: auto_updater.rs  checker.rs  downloader.rs  installer.rs  marker.rs  mod.rs  types.rs  verifier.rs
swifttunnel-windows/src/vpn/: adapter.rs  auto_routing.rs  config.rs  connection.rs  error_messages.rs  mod.rs  packet_interceptor.rs  parallel_interceptor.rs  process_cache.rs  process_tracker.rs  process_watcher.rs  routes.rs  servers.rs  split_tunnel.rs  tcp_tunnel.rs  tso_recovery.rs  tunnel.rs  udp_relay.rs  wfp.rs  wfp_block.rs
swifttunnel-windows/wix/: main.wxs
ui-preview/.next/: trace
(+151 files in other folders)
