[package]
name = "swifttunnel-fps-booster"
version = "1.0.42"
edition = "2024"
authors = ["SwiftTunnel <support@swifttunnel.net>"]
description = "SwiftTunnel - Game Booster with PC Optimizations"
default-run = "swifttunnel-fps-booster"

[dependencies]
# Core library with all backend modules (VPN, auth, optimization, etc.)
swifttunnel-core = { path = "../swifttunnel-core", features = ["velopack-updater"] }

# GUI Framework - egui 0.33 with glow (OpenGL) renderer for maximum compatibility
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33"

# System tray support
tray-icon = "0.19"

# Image loading for tray icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Velopack installer/updater framework (lifecycle hooks in main.rs)
velopack = "0.0"

# These are also in swifttunnel-core but needed directly by GUI code
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
winreg = "0.52"
parking_lot = "0.12"
anyhow = "1.0"

# Test configuration
[[test]]
name = "vpn_tests"
path = "Tests/vpn_tests.rs"

# Main application binary
[[bin]]
name = "swifttunnel-fps-booster"
path = "src/main.rs"

# VPN test binary
[[bin]]
name = "vpn_test"
path = "src/bin/vpn_test.rs"

# IP checker test app (for split tunnel verification)
[[bin]]
name = "ip_checker"
path = "src/bin/ip_checker.rs"

# CLI testbench for headless testing
[[bin]]
name = "testbench"
path = "src/bin/testbench/main.rs"

# Driver installer (runs elevated for WinpkFilter MSI install)
[[bin]]
name = "driver-installer"
path = "src/bin/driver_installer.rs"

[dev-dependencies]
# Already have serde_json in dependencies

[build-dependencies]
embed-manifest = "1.4"
winres = "0.1"
