[package]
name = "swifttunnel-desktop"
version = "1.15.24"
edition = "2024"
authors = ["SwiftTunnel <support@swifttunnel.net>"]
description = "SwiftTunnel desktop app - Tauri v2 frontend"

[dependencies]
swifttunnel-core = { path = "../../swifttunnel-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
base64 = "0.22"
ring = "0.17"
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }
