[package]
name = "swifttunnel-desktop"
version = "2.5.17"
default-run = "swifttunnel-desktop"
edition = "2024"
authors = ["SwiftTunnel <support@swifttunnel.net>"]
description = "SwiftTunnel desktop app - Tauri v2 frontend"

[dependencies]
swifttunnel-core = { path = "../../swifttunnel-core" }
# `default-features = false` drops the non-Windows defaults (`dbus`, `x11`,
# `webkit2gtk`) and the rarely-used `dynamic-acl` capability codegen. We
# re-enable only what this Windows-only app actually links against.
tauri = { version = "2", default-features = false, features = [
    "wry",
    "tauri-runtime-wry",
    "common-controls-v6",
    "compression",
    "tray-icon",
] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
dirs = "5"
# See swifttunnel-core/Cargo.toml: native roots trust the Windows cert store so
# antivirus/proxy TLS inspection doesn't break the app's HTTPS (login exchange).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots", "system-proxy"] }
semver = "1.0"
sha2 = "0.10"
base64 = "0.22"
ring = "0.17"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
