[package]
name = "speedtest"
version = "1.0.0"
edition = "2021"
description = "Speed test using Cloudflare - add to split tunnel apps to test VPN speed"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# TLS
rustls = "0.23"

# Timing
chrono = "0.4"

# CLI args
clap = { version = "4", features = ["derive"] }
